--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,21 @@ layout: default
 title: About me
 ---
 
-<article>
-  <h2>me</h2>
+<article class="single-page">
+  <div class="quote">
+    <blockquote>
+      <p>"And that's why you always write in first person!"</p>
+      <cite>J.Walter Weatherman, Arrested Development</cite>
+    </blockquote>
+
+  </div> <!--  .quote -->
+  <p>My name is Sam, I am a developer/ designer in London, UK, I love learning and building things for the web. These things range from services to help people to geeky tools.</p>
+
+  <p>I currently work at Steer as a teacher and developer. You can hear my ramblings on <a href="http://twitter.com/samjbmason">Twitter</a> and all of the code I churn out on <a href="http://github.com/samjbmason">GitHub</a>.</p>
+
+  <p>Also, all of the source code for this site is online and can be found <a href="https://github.com/samjbmason/maison.io">here</a>. Please feel free to suggest fixes for bugs or improvements.</p>
+
+  <p>I live in North London with my fiancé Sasha, we also share our abode with our cat, Rufus.</p>
+
+  <p>I'm always up for meeting and speaking to people, old &amp; new. If you want to talk, drop me an email at <a href="mailto:sam.jbmason@gmail.com">sam.jbmason@gmail.com</a>.</p>
 </article>
