--- a/about/index.html
+++ b/about/index.html
@@ -4,18 +4,21 @@ title: About me
 ---
 
 <article class="single-page">
-  <div class="quote">
-    <blockquote>
-      <p>"And that's why you always write in first person!"</p>
-      <cite>J.Walter Weatherman, Arrested Development</cite>
-    </blockquote>
 
-  </div> <!--  .quote -->
+
+  <div class="about-meta">
+    <img class="me" src="{{ site.url }}/assets/img/me.jpg" alt="me - Sam Mason">
+  </div>
+  <blockquote class="about-opening">
+    <p>"And that's why you always write in first person!"</p>
+    <cite>J.Walter Weatherman, Arrested Development</cite>
+  </blockquote>
+
   <p>My name is Sam, I am a developer/ designer in London, UK, I love learning and building things for the web. These things range from services to help people to geeky tools.</p>
 
   <p>I currently work at Steer as a teacher and developer. You can hear my ramblings on <a href="http://twitter.com/samjbmason">Twitter</a> and all of the code I churn out on <a href="http://github.com/samjbmason">GitHub</a>.</p>
 
-  <p>Also, all of the source code for this site is online and can be found <a href="https://github.com/samjbmason/maison.io">here</a>. Please feel free to suggest fixes for bugs or improvements.</p>
+  <p>Also, all of the source code for this site is online and can be found <a href="https://github.com/samjbmason/maison.io">here</a>. Feel free to suggest fixes for bugs or improvements.</p>
 
   <p>I live in North London with my fiancé Sasha, we also share our abode with our cat, Rufus.</p>
 
