Reorder and add sapling

--- a/projects/index.html
+++ b/projects/index.html
@@ -7,6 +7,13 @@ title: About me
   <h2>Projects</h2>
 
   <ul class="projects">
+    <li class="project super-servers">
+      <a href="http://ss.maison.io">
+        <h3>Super Servers</h3>
+        <p>Server naming schemes using the Marvel API</p>
+      </a>
+    </li> <!--  .project -->
+
     <li class="project pine-for">
       <a href="http://pinefor.it/">
         <h3>Pinefor</h3>
@@ -21,10 +28,10 @@ title: About me
       </a>
     </li> <!--  .project -->
 
-    <li class="project super-servers">
-      <a href="http://ss.maison.io">
-        <h3>Super Servers</h3>
-        <p>Server naming schemes using the Marvel API</p>
+    <li class="project sapling">
+      <a href="https://github.com/samjbmason/sapling">
+        <h3>Sapling</h3>
+        <p>Wordpress starter template originally based on Roots.</p>
       </a>
     </li> <!--  .project -->
   </ul>
