Add space and accent

--- a/about/index.html
+++ b/about/index.html
@@ -20,7 +20,7 @@ title: About me
 
   <p>Also, all of the source code for this site is online and can be found <a href="https://github.com/samjbmason/maison.io">here</a>. Feel free to suggest fixes for bugs or improvements.</p>
 
-  <p>I live in North London with my fiance Sasha, we also share our abode with our cat, Rufus.</p>
+  <p>I live in North London with my fiancé Sasha, we also share our abode with our cat, Rufus.</p>
 
   <p>I'm always up for meeting and speaking to people, old &amp; new. If you want to talk, drop me an email at <a href="mailto:sam.jbmason@gmail.com">sam.jbmason@gmail.com</a>.</p>
 </article>
