Update psd fonts url

--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,7 @@ title: About me
     </li> <!--  .project -->
 
     <li class="project psdfonts">
-      <a href="http://psdfonts.io">
+      <a href="http://psdfonts.com">
         <h3>.psdfonts</h3>
         <p>Get a list of all the fonts used in a psd, built using psd.rb by LayerVault</p>
       </a>
