Update about text

--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@ title: About me
 
   <p>My name is Sam, I am a developer/ designer in London, UK, I love learning and building things for the web. These things range from services to help people to geeky tools.</p>
 
-  <p>I currently work at Steer as a teacher and developer. You can hear my ramblings on <a href="http://twitter.com/samjbmason">Twitter</a> and all of the code I churn out on <a href="http://github.com/samjbmason">GitHub</a>.</p>
+  <p>I currently work at Steer as a teacher and developer. You can hear my ramblings on <a href="http://twitter.com/samjbmason">Twitter</a> and all of the code I churn out is on <a href="http://github.com/samjbmason">GitHub</a>.</p>
 
   <p>Also, all of the source code for this site is online and can be found <a href="https://github.com/samjbmason/maison.io">here</a>. Feel free to suggest fixes for bugs or improvements.</p>
 
