--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ title: About me
 
 
   <div class="about-meta">
-    <img class="me" src="{{ site.url }}/img/me.jpg" alt="me - Sam Mason">
+    <img class="me" src="/img/me.jpg" alt="me - Sam Mason">
   </div>
   <blockquote class="about-opening">
     <p>"And that's why you always write in first person!"</p>
@@ -18,7 +18,7 @@ title: About me
 
   <p>I currently work at Steer as a teacher and developer. You can hear my ramblings on <a href="http://twitter.com/samjbmason">Twitter</a> and all of the code I churn out is on <a href="http://github.com/samjbmason">GitHub</a>.</p>
 
-  <p>Also, all of the source code for this site is online and can be found <a href="https://github.com/samjbmason/maison.io">here</a>. Feel free to suggest fixes for bugs or improvements.</p>
+  <p>Also, all of the source code for this site is online and can be found <a href="https://github.com/samjbmason/samjbmason.github.io">here</a>. Feel free to suggest fixes for bugs or improvements.</p>
 
   <p>I live in North London with my fiancé Sasha, we also share our abode with our cat, Rufus.</p>
 
