--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
----
-layout: default
-title: About me
----
+--- layout: default title: About me ---
 
 <article class="single-page">
   <div class="about-meta">
     <img class="me" src="/img/me.jpg" alt="me - Sam Mason">
   </div>
 
-  <p>My name is Sam, I am a developer/ designer in London, UK. I love learning and building things for the web. These things range from services to help people to geeky tools.</p>
+  <p>My name is Sam, I am a developer/ designer in London, UK. I build things for the web. These things range from services
+    to help people to geeky tools.</p>
 
-  <p>Im currently making magical moments at Lost My Name as a frontend developer. You can hear my ramblings on <a href="http://twitter.com/samjbmason">Twitter</a> and all of the code I churn out is on <a href="http://github.com/samjbmason">GitHub</a>.</p>
+  <p>I'm currently an engineer at Rapha bringing cycling and technology closer together. You can hear my ramblings on
+    <a href="http://twitter.com/samjbmason">Twitter</a> and all of the code I write and open source is on
+    <a href="http://github.com/samjbmason">GitHub</a>.</p>
 
-  <p>Also, all of the source code for this site is online and can be found <a href="https://github.com/samjbmason/samjbmason.github.io">here</a>. Feel free to suggest fixes for bugs or improvements.</p>
+  <p>Also, all of the source code for this site is online and can be found
+    <a href="https://github.com/samjbmason/samjbmason.github.io">here</a>. Feel free to suggest fixes for bugs or improvements.</p>
 
-  <p>I live in North London with my wife Sasha, we also share our abode with our cat, Rufus.</p>
+  <p>I live in North London with my family, and our surly house mate Rufus the cat.</p>
 
-  <p>I'm always up for meeting and speaking to people, old &amp; new. If you want to talk, drop me an email at <a href="mailto:sam.jbmason@gmail.com">sam.jbmason@gmail.com</a>.</p>
+  <p>I'm always up for meeting and speaking to people, old &amp; new. If you want to talk, drop me an email at
+    <a href="mailto:sam.jbmason@gmail.com">sam.jbmason@gmail.com</a>.</p>
 </article>
