--- a/projects/index.html
+++ b/projects/index.html
@@ -1,38 +1,42 @@
----
-layout: default
-title: Projects
----
+--- layout: default title: Projects ---
 
 <article class="single-page">
   <h2>Projects</h2>
 
   <ul class="projects">
+    <li class="project punk-api">
+      <a href="https://github.com/samjbmason/punkapi-db">
+        <h3>Punk API</h3>
+        <p>An open source service that takes Brewdogs DIY Dog and turns it into a searchable, queryable API</p>
+      </a>
+    </li>
+
     <li class="project super-servers">
-      <a href="http://ss.maison.io">
+      <a href="https://github.com/samjbmason/super-servers">
         <h3>Super Servers</h3>
         <p>Server naming schemes using the Marvel API</p>
       </a>
-    </li> <!--  .project -->
+    </li>
 
     <li class="project pine-for">
-      <a href="http://pinefor.it/">
+      <a href="https://github.com/samjbmason/pinefor">
         <h3>Pinefor</h3>
         <p>A gift list sharing app built with Ruby on Rails</p>
       </a>
-    </li> <!--  .project -->
+    </li>
 
     <li class="project psdfonts">
-      <a href="http://psdfonts.com">
+      <a href="https://github.com/samjbmason/psdfonts">
         <h3>.psdfonts</h3>
         <p>Get a list of all the fonts used in a psd, built using psd.rb by LayerVault</p>
       </a>
-    </li> <!--  .project -->
+    </li>
 
     <li class="project sapling">
       <a href="https://github.com/samjbmason/sapling">
         <h3>Sapling</h3>
         <p>Wordpress starter template originally based on Roots.</p>
       </a>
-    </li> <!--  .project -->
+    </li>
   </ul>
 </article>
