Update and fix broken frontmatter

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
---- layout: default title: About me ---
+--- 
+  layout: default
+  title: About me 
+---
 
 <article class="single-page">
   <div class="about-meta">
@@ -12,10 +15,10 @@
     <a href="http://twitter.com/samjbmason">Twitter</a> and all of the code I write and open source is on
     <a href="http://github.com/samjbmason">GitHub</a>.</p>
 
-  <p>Also, all of the source code for this site is online and can be found
+  <p>The source code for this site can be found
     <a href="https://github.com/samjbmason/samjbmason.github.io">here</a>. Feel free to suggest fixes for bugs or improvements.</p>
 
-  <p>I live in North London with my family, and our surly house mate Rufus the cat.</p>
+  <p>I live in North London with my family, and our surly cat, Rufus.</p>
 
   <p>I'm always up for meeting and speaking to people, old &amp; new. If you want to talk, drop me an email at
     <a href="mailto:sam.jbmason@gmail.com">sam.jbmason@gmail.com</a>.</p>
