--- a/projects/index.html
+++ b/projects/index.html
@@ -10,28 +10,28 @@
     <div class="project punk-api">
       <a href="https://github.com/samjbmason/punkapi-db">
         <h3>Punk API</h3>
-        <p>An open source service that takes Brewdogs DIY Dog and turns it into a searchable, queryable API</p>
+        <p>An open source service that takes Brewdog's DIY Dog recipe PDF and turns it into a searchable, queryable API.</p>
       </a>
     </div>
 
     <div class="project super-servers">
       <a href="https://github.com/samjbmason/super-servers">
         <h3>Super Servers</h3>
-        <p>Server naming schemes using the Marvel API</p>
+        <p>Server naming schemes using the Marvel API.</p>
       </a>
     </div>
 
     <div class="project pine-for">
       <a href="https://github.com/samjbmason/pinefor">
         <h3>Pinefor</h3>
-        <p>A gift list sharing app built with Ruby on Rails</p>
+        <p>A gift list sharing app built with Ruby on Rails.</p>
       </a>
     </div>
 
     <div class="project psdfonts">
       <a href="https://github.com/samjbmason/psdfonts">
         <h3>.psdfonts</h3>
-        <p>Get a list of all the fonts used in a psd, built using psd.rb by LayerVault</p>
+        <p>Get a list of all the fonts used in a psd, built using psd.rb by LayerVault.</p>
       </a>
     </div>
 
